feat: fix places detour logic and implement mobile places list screen