@@ -13,22 +13,16 @@ import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
+import java.time.Duration;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.DoubleSummaryStatistics;
 
-/**
- * Orchestrates fetching, normalizing, caching and filtering places for a route.
- * - Reads route geometry from route-service
- * - Calls external providers (Geoapify, Overpass) to fetch raw places
- * - Normalizes provider-specific data into the domain Place model
- * - Optionally caches results in Redis
- * - Applies filtering (category, rating, detour, paging)
- * - Publishes a PlacesFetchedEvent for analytics
- */
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class PlacesService {
+
+    private static final Duration BASE_CACHE_TTL = Duration.ofMinutes(10);
 
     private final RouteServiceClient routeServiceClient;
     private final GeoapifyClient geoapifyClient;
@@ -37,157 +31,178 @@ public class PlacesService {
     private final RedisTemplate<String, Place[]> placesRedisTemplate;
     private final ObjectProvider<PlacesFetchedEventProducer> eventProducerProvider;
 
-    /**
-     * Main entry point used by the API layer.
-     * 1) Try to read places from Redis cache (by routeId + filter criteria)
-     * 2) If cache is empty or missing, call external providers and normalize
-     * 3) Cache non-empty results
-     * 4) Apply filtering (category, rating, detour, offset/limit)
-     */
     public List<Place> getPlacesForRoute(String routeId, PlaceFilterCriteria criteria) {
 
-        String cacheKey = buildCacheKey(routeId, criteria);
+        // 0) Incoming criteria log (kanıt/diagnostic)
+        log.info("[PlacesService] Incoming criteria: routeId={}, category={}, minRating={}, maxDetourKm={}, limit={}, offset={}",
+                routeId,
+                criteria.getCategory(),
+                criteria.getMinRating(),
+                criteria.getMaxDetourKm(),
+                criteria.getLimit(),
+                criteria.getOffset()
+        );
 
-        // 1) Try to read from cache
-        Place[] cached = placesRedisTemplate.opsForValue().get(cacheKey);
-        if (cached != null) {
-            if (cached.length > 0) {
-                // Cache hit with non-empty list: we can safely return filtered version
-                log.info("[PlacesService] Cache hit. key={}, size={}", cacheKey, cached.length);
-                return applyFilter(Arrays.asList(cached), criteria);
-            } else {
-                // Cache contains an empty list (from older behavior).
-                // We log it but will still recompute, so we can repopulate if providers start returning data.
-                log.info("[PlacesService] Cache hit with EMPTY list. key={}. Will re-fetch from providers.", cacheKey);
-            }
-        } else {
-            log.info("[PlacesService] Cache miss. key={}", cacheKey);
+        // 1) Cache sadece BASE ana liste için kullanılır
+        String baseKey = buildBaseCacheKey(routeId);
+
+        Place[] cachedBase = placesRedisTemplate.opsForValue().get(baseKey);
+        if (cachedBase != null && cachedBase.length > 0) {
+            log.info("[PlacesService] Cache hit(BASE). key={}, size={}", baseKey, cachedBase.length);
+
+            List<Place> filtered = applyFilter(Arrays.asList(cachedBase), criteria);
+            log.info("[PlacesService] Returning filtered from BASE cache. filteredSize={}", filtered.size());
+            return filtered;
         }
 
-        // 2) Fetch route geometry from route-service
+        log.info("[PlacesService] Cache miss(BASE). key={}", baseKey);
+
+        // 2) Fetch route
         RouteSummary route = routeServiceClient.getRouteById(routeId);
         String geometry = route.getGeometry();
 
-        // 3) Fetch raw places from providers (each wrapped in safe helpers)
+        // 3) Fetch providers with status (provider fail -> cache zehirleme yok)
         List<RawPlace> rawPlaces = new ArrayList<>();
 
-        List<RawPlace> fromGeoapify = fetchFromGeoapifySafely(geometry);
-        log.info("[PlacesService] Geoapify returned {} raw places", fromGeoapify.size());
-        rawPlaces.addAll(fromGeoapify);
+        ProviderFetchResult geo = fetchFromGeoapifySafelyWithStatus(geometry);
+        log.info("[PlacesService] Geoapify returned {} raw places (success={})", geo.places().size(), geo.success());
+        rawPlaces.addAll(geo.places());
 
-        List<RawPlace> fromOverpass = fetchFromOverpassSafely(geometry);
-        log.info("[PlacesService] Overpass returned {} raw places", fromOverpass.size());
-        rawPlaces.addAll(fromOverpass);
+        ProviderFetchResult over = fetchFromOverpassSafelyWithStatus(geometry);
+        log.info("[PlacesService] Overpass returned {} raw places (success={})", over.places().size(), over.success());
+        rawPlaces.addAll(over.places());
 
         log.info("[PlacesService] Total raw places from providers = {}", rawPlaces.size());
 
-        // 4) Normalize provider-specific data into our domain Place model
+        // 4) Normalize
         List<Place> normalized = placeNormalizer.normalize(rawPlaces, geometry);
         log.info("[PlacesService] Normalized places count = {}", normalized.size());
 
-        // 5) Cache only non-empty normalized results
-        if (!normalized.isEmpty()) {
-            placesRedisTemplate
-                    .opsForValue()
-                    .set(cacheKey, normalized.toArray(new Place[0]));
-            log.info("[PlacesService] Cached {} places under key={}", normalized.size(), cacheKey);
+// 4.0) DETOUR ENRICH (NEW)
+        List<com.roadify.places.infrastructure.geo.PolylineDecoder.LatLon> routePoints =
+                com.roadify.places.infrastructure.geo.PolylineDecoder.decode(geometry);
+
+        if (routePoints.isEmpty()) {
+            log.warn("[PlacesService] Route geometry could not be decoded. detourKm will remain 0.0");
         } else {
-            log.info("[PlacesService] Normalized list is empty. Skipping cache write for key={}", cacheKey);
+            normalized = normalized.stream()
+                    .map(p -> {
+                        double detourKm = com.roadify.places.infrastructure.geo.DetourCalculator.computeDetourKm(
+                                p.getLatitude(), p.getLongitude(), routePoints
+                        );
+
+                        // Place is @Data => has setters
+                        Place copy = Place.builder()
+                                .id(p.getId())
+                                .name(p.getName())
+                                .category(p.getCategory())
+                                .latitude(p.getLatitude())
+                                .longitude(p.getLongitude())
+                                .rating(p.getRating())
+                                .detourKm(detourKm)
+                                .build();
+
+                        return copy;
+                    })
+                    .toList();
         }
 
-        // 6) Publish domain event (for analytics, downstream consumers, etc.)
+// 4.1) Detour stats (kanıt)
+        logDetourStats(normalized);
+
+
+        // 5) Cache write policy:
+        // - Normalized boş değilse
+        // - Ve tüm provider’lar başarılıysa (aksi halde 50’lik partial dataset cache’i bozmasın)
+        boolean allProvidersOk = geo.success() && over.success();
+
+        if (!normalized.isEmpty() && allProvidersOk) {
+            placesRedisTemplate.opsForValue().set(baseKey, normalized.toArray(new Place[0]), BASE_CACHE_TTL);
+            log.info("[PlacesService] Cached BASE {} places under key={} (ttl={})", normalized.size(), baseKey, BASE_CACHE_TTL);
+        } else if (!allProvidersOk) {
+            log.warn("[PlacesService] Skipping BASE cache write because a provider failed. geoOk={}, overOk={}",
+                    geo.success(), over.success());
+        } else {
+            log.info("[PlacesService] Normalized list is empty. Skipping BASE cache write for key={}", baseKey);
+        }
+
+        // 6) Publish event (istersen sadece allProvidersOk iken de publish edebilirsin; şimdilik aynı)
         publishEvent(routeId, normalized);
 
-        // 7) Apply filter (category, rating, detour, paging) and return
+        // 7) Filter in-memory and return
         List<Place> filtered = applyFilter(normalized, criteria);
         log.info("[PlacesService] Filtered places count = {}", filtered.size());
-
         return filtered;
     }
 
-    /**
-     * Calls Geoapify client in a safe manner:
-     * - Any exception is caught and logged
-     * - Returns an empty list instead of throwing, so the service continues to work
-     */
-    private List<RawPlace> fetchFromGeoapifySafely(String geometry) {
+    private void logDetourStats(List<Place> places) {
+        if (places == null || places.isEmpty()) {
+            log.info("[PlacesService] detour stats: empty list");
+            return;
+        }
+
+        DoubleSummaryStatistics stats = places.stream()
+                .mapToDouble(Place::getDetourKm)
+                .summaryStatistics();
+
+        long zeros = places.stream().filter(p -> p.getDetourKm() == 0.0).count();
+
+        log.info("[PlacesService] detour stats: count={}, zeros={}, min={}, max={}, avg={}",
+                places.size(), zeros, stats.getMin(), stats.getMax(), stats.getAverage());
+    }
+
+    private ProviderFetchResult fetchFromGeoapifySafelyWithStatus(String geometry) {
         try {
             List<RawPlace> result = geoapifyClient.fetchPlaces(geometry);
-            return (result != null) ? result : List.of();
+            return new ProviderFetchResult(true, (result != null) ? result : List.of());
         } catch (Exception e) {
-            log.warn("[PlacesService] Geoapify fetch failed, continuing without Geoapify data.", e);
-            return List.of();
+            log.warn("[PlacesService] Geoapify fetch failed.", e);
+            return new ProviderFetchResult(false, List.of());
         }
     }
 
-    /**
-     * Calls Overpass client in a safe manner:
-     * - Handles any WebClient error
-     * - Logs the error and returns an empty list instead of bubbling up
-     */
-    private List<RawPlace> fetchFromOverpassSafely(String geometry) {
+    private ProviderFetchResult fetchFromOverpassSafelyWithStatus(String geometry) {
         try {
             List<RawPlace> result = overpassClient.fetchPlaces(geometry);
-            return (result != null) ? result : List.of();
+            return new ProviderFetchResult(true, (result != null) ? result : List.of());
         } catch (Exception e) {
-            log.warn("[PlacesService] Overpass fetch failed, continuing without Overpass data.", e);
-            return List.of();
+            log.warn("[PlacesService] Overpass fetch failed.", e);
+            return new ProviderFetchResult(false, List.of());
         }
     }
 
-    /**
-     * Builds a cache key that uniquely identifies:
-     * - the route
-     * - the applied filter criteria (category, minRating, maxDetourKm)
-     */
-    private String buildCacheKey(String routeId, PlaceFilterCriteria criteria) {
-        return "route:" + routeId + ":places:" +
-                Objects.toString(criteria.getCategory(), "ALL") + ":" +
-                Objects.toString(criteria.getMinRating(), "NR") + ":" +
-                Objects.toString(criteria.getMaxDetourKm(), "ND");
+    private String buildBaseCacheKey(String routeId) {
+        return "route:" + routeId + ":places:BASE";
     }
 
-    /**
-     * Applies business-level filtering on top of the normalized places:
-     * - Filter by category (if provided)
-     * - Filter by minimum rating (if provided)
-     * - Filter by maximum detour distance (if provided)
-     * - Apply pagination via offset & limit
-     */
     private List<Place> applyFilter(List<Place> places, PlaceFilterCriteria criteria) {
+        if (places == null || places.isEmpty()) return List.of();
+
+        int safeOffset = (criteria.getOffset() == null || criteria.getOffset() < 0) ? 0 : criteria.getOffset();
+        int safeLimit = (criteria.getLimit() == null || criteria.getLimit() <= 0) ? places.size() : criteria.getLimit();
+
         return places.stream()
-                // Category filter: if criteria.category == null, accept all categories
                 .filter(p -> criteria.getCategory() == null || p.getCategory() == criteria.getCategory())
-                // Rating filter: if criteria.minRating == null, accept all ratings
                 .filter(p -> criteria.getMinRating() == null ||
                         (p.getRating() != null && p.getRating() >= criteria.getMinRating()))
-                // Detour filter: if criteria.maxDetourKm == null, accept all detours
                 .filter(p -> criteria.getMaxDetourKm() == null || p.getDetourKm() <= criteria.getMaxDetourKm())
-                // Offset == "how many elements to skip"
-                .skip(criteria.getOffset() == null ? 0 : criteria.getOffset())
-                // Limit == "maximum number of elements to return"
-                .limit(criteria.getLimit() == null ? places.size() : criteria.getLimit())
-                .collect(Collectors.toList());
+                .skip(safeOffset)
+                .limit(safeLimit)
+                .toList();
     }
 
-    /**
-     * Publishes an event with some aggregated statistics:
-     * - Total number of places
-     * - Per-category counts
-     *
-     * If PlacesFetchedEventProducer is not configured in the context,
-     * the method is a no-op.
-     */
     private void publishEvent(String routeId, List<Place> places) {
         PlacesFetchedEventProducer producer = eventProducerProvider.getIfAvailable();
-
         if (producer == null) {
             log.debug("[PlacesService] PlacesFetchedEventProducer not available, skipping event publish.");
             return;
         }
 
         Map<PlaceCategory, Integer> categoryCounts = places.stream()
-                .collect(Collectors.groupingBy(Place::getCategory, Collectors.summingInt(p -> 1)));
+                .collect(java.util.stream.Collectors.groupingBy(
+                        Place::getCategory,
+                        java.util.stream.Collectors.summingInt(p -> 1)
+                ));
 
         PlacesFetchedEvent event = PlacesFetchedEvent.builder()
                 .routeId(routeId)
@@ -196,7 +211,10 @@ public class PlacesService {
                 .build();
 
         producer.publish(event);
+
         log.info("[PlacesService] Published PlacesFetchedEvent for routeId={}, totalCount={}",
                 routeId, places.size());
     }
+
+    private record ProviderFetchResult(boolean success, List<RawPlace> places) {}
 }
